Fixed up the look of the list-groups. Finally removed that panels so there is not more double borders

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -62,6 +62,12 @@ html{
     font-size: 14px;
 }
 
+.list-group-heading{
+    color: #2c3e50;
+    background-color: #ecf0f1;
+    height: 45px;
+}
+
 .list-group-sidemenu li{
     background-color: transparent;
     border: none;
@@ -122,7 +128,6 @@ html{
 
 .dropdown-menu>li>a{
     padding-top: 5px !important;
-    
 }
 
 .pad-bottom{
